Fix style and grammar

--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -299,7 +299,7 @@ msgid ""
 "\\textbf{Special:} Place the Cloak of the Undead King IV and VI Cards aside\n"
 "\n"
 msgstr ""
-"\\textbf{Specjalne:} Odłóż Karty Płaszcz Króla Nieumarłych IV i VI na bok\n"
+"\\textbf{Specjalne:} Odłóż Karty Płaszcz Nieumarłego Króla IV i VI na bok\n"
 "\n"
 
 #. type: multicols*
@@ -447,7 +447,7 @@ msgid ""
 msgstr ""
 "\\textbf{Przy wejściu do Osady na Kafelku F3:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Czcigodni Sojusznicy''\n"
+"  \\item Przeczytaj fragment ,,Oddani Sojusznicy''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -461,9 +461,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Przed walką z wrogin Bohaterem:}\n"
+"\\textbf{Przed walką z wrogim Bohaterem:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj fragment ,,Przynęta z Zamianą''\n"
+"  \\item Przeczytaj fragment ,,Podstępna Zamiana''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -517,6 +517,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Armia wroga się nie porusza\n"
+"  \\item Maksymalny Poziom twojego Bohatera to IV\n"
+"  \\item Budynek Chwała Erathii jest niedostępny\n"
+"  \\item Osada na F3 nie ma neutralnych wrogów\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: campaigns/castle_greek_gift.tex:122
@@ -539,10 +546,10 @@ msgid ""
 "  \\node at (10, -2.0) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F3}}}}};"
 msgstr ""
 "[overlay]\n"
-"  \\node at (8.6, -5.3) {\n"
+"  \\node at (8.6, -4.8) {\n"
 "    \\includegraphics[width=\\textwidth]{\\_assets/maps/castle_greek_gift.png}\n"
 "  };\n"
-"  \\node at (10, -2.0) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F3}}}}};"
+"  \\node at (10, -1.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F3}}}}};"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:137 campaigns/castle_sicilian_dragon.tex:157
@@ -574,7 +581,7 @@ msgid ""
 "Her gaze turned to her cracked skin and mangled thumbnail, and it reminded her of how hard she had fought to be where she was.\n"
 "\n"
 msgstr ""
-"Katarzyna Ironfist potarła swoim zmęczonym kciukiem zdjęcie ojca, Króla Gryphonheart, w medalionie.\n"
+"Katarzyna Ironfist potarła swoim zmęczonym kciukiem wizerunek ojca, króla Gryphonheart, w medalionie.\n"
 "Chciała pamiętać dobre, szlachetne części jego życia, a nie jego czyny w nieżyciu.\n"
 "Jej wzrok padł na popękaną skórę i zniekształcony paznokieć, co przypominało jej, jak ciężko walczyła, aby być tu, gdzie teraz jest.\n"
 "\n"
@@ -590,7 +597,7 @@ msgid ""
 msgstr ""
 "Ciężar Erathii spoczywał na jej barkach.\n"
 "Zaledwie tygodnie minęły od oblężenia i odzyskania Steadwick, a zasoby, jak i siła robocza, były na wyczerpaniu.\n"
-"Mimo to, z czasem kamienny tron zamku byłby wystarczający do dalszego wyzwalania królestwa.\n"
+"Mimo to, z czasem kamienna siedziba zamku będzie wystarczająca do dalszego wyzwalania królestwa.\n"
 "\n"
 
 #. type: multicols*
@@ -603,10 +610,10 @@ msgid ""
 "While rumors are usually best left to fishwives and children, this one aligned with information about an army growing in strength, and she dreaded the thought of the two problems colliding and crashing over her weary crown.\n"
 "\n"
 msgstr ""
-"Jeden taki problem ciążył jej w myślach.\n"
+"Jeden taki problem ciążył jej na umyśle.\n"
 "Odkładając medalion i chwytając wiadomość, ponownie przeczytała szczególny fragment o coraz potężniejszym nekromancie o imieniu Vhidhax.\n"
 "Plotki głosiły, że ów nikczemnik skradł cenne artefakty, które jeszcze bardziej wzmocniły jego władzę nad umarłymi.\n"
-"O ile plotki zwykle najlepiej zostawić żonom rybaków i dzieciom, ten donos pokrywał się z informacjami o rosnącej w siłę armii, a ona drżała na myśl możliwym zderzeniu się tych zagrożeń, które mogłyby złamać jej i tak już nadwyrężoną koronę.\n"
+"O ile plotki zwykle najlepiej zostawić żonom rybaków i dzieciom, ta pokrywała się z informacjami o rosnącej w siłę armii, a ona drżała na myśl o tym, jak te dwa zagrożenia mogłyby przytłoczyć jej i tak już nadwyrężoną koronę.\n"
 "\n"
 
 #. type: multicols*
@@ -617,8 +624,8 @@ msgid ""
 "She'd just about fallen asleep in her chair when a heavy knock turned her attention to the room's large door that sported intricately carved shields from various long-gone baronies.\n"
 "\n"
 msgstr ""
-"Tej nocy, Katarzyna wylewała swoje żale Rionowi na temat żmudnej odbudowy Steadwick.\n"
-"Była już niemal zaśnięta w fotelu, gdy ciężkie uderzenie skierowało jej uwagę na ogromne drzwi sali, na których widniały kunsztownie wyrzeźbione tarcze różnych dawno już nieistniejących baronii.\n"
+"Późnym wieczorem Katarzyna narzekała Rionowi na temat żmudnej odbudowy Steadwick.\n"
+"Była już niemal zaśnięta w fotelu, gdy ciężkie uderzenie skierowało jej uwagę na ogromne drzwi komnaty, na których widniały kunsztownie wyrzeźbione tarcze różnych dawno już nieistniejących baronii.\n"
 "\n"
 
 #. type: multicols*
@@ -631,8 +638,8 @@ msgid ""
 "\n"
 msgstr ""
 "Drewniane wrota rozwarły się, zanim zdążyła poderwać się z fotela, ukazując przerażonego strażnika z wybałuszonymi oczyma.\n"
-"Mężczyzna nie wydał z siebie ani słowa; to, co go przerażało, było absolutne.\n"
-"Zamiast tego, drżącą ręką wskazał w stronę okna po drugiej stronie sali.\n"
+"Mężczyzna nie wydał z siebie ani słowa; groza, która go ogarnęła, wydawała się absolutna.\n"
+"Zamiast tego, drżącą ręką wskazał w stronę okna po drugiej stronie komnaty.\n"
 "\n"
 
 #. type: multicols*
@@ -645,8 +652,8 @@ msgid ""
 "\n"
 msgstr ""
 "Katarzyna spojrzała w stronę Riona, po czym oboje błyskawicznie ruszyli w kierunku prostokątnego otwartego okna.\n"
-"To, co zobaczyli, również ich przeraziło. Katarzyna poczuła wzbierającą beznadzieję i mocno zacisnęła dłoń na ramieniu Riona z zaskakującą siłą.\n"
-"Gdy odwrócił się do niej ze słabym grymasem, odpowiedziała mu tylko zdecydowanym spojrzeniem.\n"
+"To, co zobaczyli, również ich przeraziło, a choć serce Katarzyny zadrżało, zacisnęła dłoń na ramieniu Riona z zaskakującą siłą.\n"
+"Gdy odwrócił się do niej ze słabym grymasem, odpowiedziała mu tylko kamiennym, zdecydowanym spojrzeniem.\n"
 "\n"
 
 #. type: multicols*
@@ -658,9 +665,9 @@ msgid ""
 "A magnificently terrifying azure hue wafted from a Ghost Dragon's massive, extended wings like an ethereal heat haze.\n"
 "\n"
 msgstr ""
-"Niebezpieczeństwo ponownie zawitało do Steadwick.\n"
-"Na wzgórzu w oddali, skąd widać było bezbronnie leżące zagrody, które Katarzyna miała pod opieką, drapieżnik rozglądał się jak wilk wypatrujący owiec.\n"
-"Niesamowicie przerażający, błękitny blask rozlewał się spod ogromnych, rozpostartych skrzydeł Upiornego Smoka, niczym eteryczna fala gorąca.\n"
+"Niebezpieczeństwo powróciło do Steadwick.\n"
+"Na wzgórzu w oddali, skąd widać było bezbronne gospodarstwa, które Katarzyna miała pod opieką, drapieżnik rozglądał się jak wilk wypatrujący owiec.\n"
+"Niesamowicie przerażający, błękitny blask rozlewał się z ogromnych, rozpostartych skrzydeł Upiornego Smoka, niczym eteryczna fala gorąca.\n"
 "\n"
 
 #. type: multicols*
@@ -670,7 +677,7 @@ msgid ""
 "\\textbf{Reverent Allies}\n"
 "\n"
 msgstr ""
-"\\textbf{Czcigodni Sojusznicy}\n"
+"\\textbf{Oddani Sojusznicy}\n"
 "\n"
 
 #. type: multicols*
@@ -697,10 +704,10 @@ msgid ""
 "It caught Catherine's horse off guard, and she had to catch the reins and wrench them hard to steady herself and calm the frightened animal before it could fling her from her seat.\n"
 "\n"
 msgstr ""
-"Sylwetka szybowała nisko na tle porannego słońca.\n"
+"Poranne słońce świeciło jasno, a jakaś sylwetka szybowała nisko na jego tle.\n"
 "Katarzyna z początku sądziła, że to Gryf, widząc jedynie zarys skrzydeł.\n"
 "Jednak gdy postać się zbliżyła, stało się jasne, że to kształt uskrzydlonego mężczyzny.\n"
-"Katarzyna musiała mocno chwycić lejce i energicznie je pociągnąć, aby się ustabilizować i uspokić przerażone zwierzę, zanim to zdążyłoby ją zrzucić z siodła.\n"
+"Katarzyna musiała mocno chwycić lejce i energicznie je pociągnąć, aby się ustabilizować i uspokoić przerażone zwierzę, zanim to zdążyłoby ją zrzucić z siodła.\n"
 "\n"
 
 #. type: multicols*
@@ -712,7 +719,7 @@ msgid ""
 "While the forces behind her fell to their knees in reverence, she only nodded with stern resolve.\n"
 "\n"
 msgstr ""
-"Z błyskawiczną szybkością postać wylądowała obok nich, ukazując szczeciniastą, acz przystojną twarz młodego mężczyzny ze złotymi, kręconymi dredami i imponująco masywną brązową zbroją wyrzeźbioną na jego umięśnionym ciele.\n"
+"Z błyskawiczną szybkością postać wylądowała tuż przed nimi, ukazując szczeciniastą, acz przystojną twarz młodego mężczyzny ze złotymi, kręconymi dredami i imponująco masywną brązową zbroją wyrzeźbioną na jego umięśnionym ciele.\n"
 "Był jednym ze słynnych Archaniołów, którzy pozostali w pobliżu Steadwick po zwycięstwie Katarzyny.\n"
 "Podczas gdy armia za nią upadła na kolana w hołdzie, ona jedynie skinęła głową z żelazną determinacją.\n"
 "\n"
@@ -726,8 +733,9 @@ msgid ""
 "I expected you might come when I spied the rot taking form in the hills.''\n"
 "\n"
 msgstr ""
-"Z głosem głębszym i bardziej donośnym niż u jakiegokolwiek mężczyzny, anioł jako pierwszy przemówił.\n"
-",,Królowo Katarzyno, spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.''\n"
+"Głosem głębszym i bardziej donośnym niż u jakiegokolwiek mężczyzny, anioł jako pierwszy przemówił.\n"
+",,Królowo Katarzyno.\n"
+"Spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.''\n"
 "\n"
 
 #. type: multicols*
@@ -741,8 +749,8 @@ msgid ""
 "Would you join me at my side?''\n"
 "\n"
 msgstr ""
-"Catherine odpowiedziała uśmiechem.\n"
-"Miło było przekonać się, że wciąż ma sojuszników; potrzebowała więcej sił, by stawić czoła nieumarłym.\n"
+"Katarzyna odpowiedziała uśmiechem.\n"
+"Dobrze było widzieć, że wciąż ma sojuszników; jej siły wymagały wzmocnienia, by stawić czoła nieumarłym.\n"
 ",,Miło cię widzieć, przyjacielu,'' powiedziała.\n"
 ",,Wygląda na to, że Steadwick znów jest zagrożone, a ja ruszam, by wyplenić zło, zanim zdąży zapuścić korzenie.\n"
 "Czy dołączysz do mnie?''\n"
@@ -759,11 +767,11 @@ msgid ""
 "Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.\n"
 "\n"
 msgstr ""
-"``Oczywiście, królowo!'' anioł wykrzyknął.\n"
-"``Jeśli połączymy siły, żadne zło nas nie zatrzyma!'' Kiedy ostatnie słowa opuściły jego krtań i zaczęły rozbrzmiewać echem, dobył swoją broń.\n"
-"Ostrze miecza zapłonęło, gdy tylko opuściło pochwę, a jego blask sprawił, że większość klęczących odwróciła wzrok.\n"
-"Zaraz potem wzbił się w powietrze i zaczął krążyć dokoła.\n"
-"Katarzyna szeroko się uśmiechnęła, obserwując pojawiających się kolejnych aniołów, a potem spojrzała na swoich żołnierzy i wyciągnęła rękę w geście rozkazu do marszu.\n"
+",,Oczywiście, moja królowo!'' wykrzyknął anioł.\n"
+",,Razem żadne zło nas nie zatrzyma!'' Gdy tylko ostatnie słowa opuściły jego usta i zaczęły rozbrzmiewać echem, dobył swoją broń.\n"
+"Ostrze długiego miecza zapłonęło, gdy tylko opuściło pochwę, a jego oślepiająca chwała sprawiła, że większość klęczących odwróciła wzrok.\n"
+"Zaraz potem wzbił się w powietrze i zaczął krążyć po okolicy.\n"
+"Katarzyna szeroko się uśmiechnęła, obserwując pojawiających się kolejnych aniołów, po czym spojrzała na swoje siły i wyciągnęła otwartą dłoń w geście rozkazu do marszu.\n"
 "\n"
 
 #. type: multicols*
@@ -783,7 +791,7 @@ msgid ""
 "\\textbf{Bait And Switch}\n"
 "\n"
 msgstr ""
-"\\textbf{Przynęta z Zamianą}\n"
+"\\textbf{Podstępna Zamiana}\n"
 "\n"
 
 #. type: multicols*
@@ -797,9 +805,9 @@ msgid ""
 "\n"
 msgstr ""
 "Katarzyna nie mogła się doczekać, by przebić mieczem serce Upiornego Smoka, a potem odciąć głowę temu, kto nim dowodził.\n"
-"Skierowała swojego potężnego wierzchowca naprzód, szarżując na czekających, prowokujących wrogów.\n"
+"Popędziła swojego potężnego wierzchowca naprzód, szarżując na czekających, prowokujących wrogów.\n"
 "Choć ogromna liczba chwiejnych nieumarłych, w większości ożywionych mieszkańców pobliskich osad, była trudna do zignorowania, nie mieli szans jej zatrzymać.\n"
-"Z hukiem i trzaskiem przedarła się przez ich szeregi, odrywając kończyny i łamiąc kości.\n"
+"Z grzmotem i trzaskiem przedarła się przez ich szeregi, odrywając kończyny i łamiąc kości.\n"
 "\n"
 
 #. type: multicols*
@@ -814,12 +822,12 @@ msgid ""
 "More than she could take on alone, she swung her steed in a circle to reform with her mounted allies, then looked to the sky just as an Archangel came crashing down onto the dragon.\n"
 "\n"
 msgstr ""
-"Chwilę później przedarła się już za połowę masy ciał, gdy uderzył ją odór gnijących ciał i dotarł do niej ogrom liczebności wroga.\n"
+"Sekundy później była już w połowie drogi przez masę ciał, gdy uderzył ją odór gnijącego mięsa i uświadomiła sobie prawdziwą potęgę liczebną wroga.\n"
 "Upiorni Rycerze flankowali smoka, ku któremu pędziła.\n"
-"Co gorsza, w tylnych szeregach stała sędziwie i nędznie wyglądająca postać w szacie, obserwująca bitwę.\n"
-"Pomimo swojego mizernego wyglądu, emanowała niezwykle potężną aurą.\n"
+"Co gorsza, w tylnych szeregach stała postać w szacie o zgrzybiałym wyglądzie, obserwująca bitwę.\n"
+"Pomimo swojego nędznego wyglądu, emanowała niezwykle potężną obecnością.\n"
 "Kłujący dreszcz przeszył kręgosłup Katarzyny, gdy poczuła — bardziej niż zobaczyła — że jej spojrzenie spotkało się z oczami postaci.\n"
-"Nie mogą stawić czoła takiej liczbie wrogów samotnie, zawróciła wierzchowca, by dołączyć do swoich sprzymierzeńców, po czym spojrzała ku niebu w chwili, gdy Archanioł spadł z hukiem na smoka.\n"
+"Nie mogąc stawić czoła takiej liczbie wrogów samotnie, zawróciła wierzchowca, by dołączyć do swoich konnych sprzymierzeńców, po czym spojrzała ku niebu w chwili, gdy Archanioł spadł z hukiem na smoka.\n"
 "\n"
 
 #. type: multicols*
@@ -845,7 +853,7 @@ msgid ""
 "\n"
 msgstr ""
 "Oczy Katarzyny skierowały się na postać, którą uznała za nekromantę.\n"
-"Stał nieruchomo jeszcze przez chwilę, zanim powietrze przeszył chichot, a jego obraz rozwiał się w nocnym powietrzu, tak jak pozostałych bestii.\n"
+"Stała nieruchomo jeszcze przez chwilę, zanim powietrze przeszył złowieszczy chichot, a jej obraz rozwiał się w nocnym powietrzu, tak jak pozostałych bestii.\n"
 "\n"
 
 #. type: multicols*
@@ -857,7 +865,7 @@ msgid ""
 "\n"
 msgstr ""
 "To była pułapka.\n"
-"Ani nekromanta, ani jego najmocniejszych sił tu nie było, a Katarzyna musiała przebić się spod naporu nieumarłych, tracąc cenny czas i życia.\n"
+"Ani nekromanty, ani jego najmocniejszych sił tu nie było, a Katarzyna musiała przebić się spod naporu nieumarłych, tracąc cenny czas i życia.\n"
 "\n"
 
 #. type: multicols*
@@ -897,7 +905,7 @@ msgid ""
 "She just hoped… Her stomach churned as her gaze turned back to Steadwick.\n"
 "\n"
 msgstr ""
-"Katarzyna sapnęła ocierając pot z czoła, gdy ostatni nieumarli padli z mokrym plaśnięciem.\n"
+"Katarzyna sapnęła, ocierając pot z czoła, gdy ostatni nieumarli padli z mokrym plaśnięciem.\n"
 "Jej siły były potężne, a proste ożywieńce nie stanowiły dla nich poważnego zagrożenia.\n"
 "Miała tylko nadzieję… Żołądek ścisnął jej się, gdy spojrzała z powrotem na Steadwick.\n"
 "\n"
@@ -926,7 +934,7 @@ msgid ""
 "\n"
 msgstr ""
 "Rion szybko ją dogonił, jego koń dyszał równie ciężko jak on.\n"
-"Zaczął mówić, ale nie mógł znaleźć słów, gdy jego myśli galopowały.\n"
+"Zaczął mówić, ale nie mógł znaleźć słów, gdy myśli mu galopowały.\n"
 "Zamiast tego położył dłoń na ramieniu swej królowej.\n"
 "\n"
 
@@ -937,7 +945,7 @@ msgid ""
 "The necromancer had played his opening move and won.\n"
 "\n"
 msgstr ""
-"Nekromanta wykonał swój pierwszy ruch i wygrał.\n"
+"Nekromanta zagrał swoje otwarcie i wygrał.\n"
 "\n"
 
 #. type: multicols*
@@ -949,7 +957,7 @@ msgid ""
 "\n"
 msgstr ""
 "Zanim Katarzyna odwróciła się do swoich przegrupowujących się sił, dostrzegła w oddali widmowy błękitny blask prawdziwego Upiornego Smoka.\n"
-"Jego zadanie zniszczenia obron Steadwick zostało ukończone.\n"
+"Wypełnił już swoje zadanie zniszczenia umocnień Steadwick.\n"
 "\n"
 
 #. type: multicols*
@@ -960,7 +968,7 @@ msgid ""
 "``Find him!'' she roared, addressing whatever gods were listening as well as the angels above.\n"
 "\n"
 msgstr ""
-"Katarzyna rzuciła głowę ku niebu. Archanioły krążyły nad nią. Łzy zbierały się jej w oczach na myśl o utracie tego, nad czym tak ciężko pracowała.\n"
+"Katarzyna uniosła głowę ku niebu. Archanioły krążyły nad nią. Łzy zbierały się jej w oczach na myśl o utracie tego, nad czym tak ciężko pracowała.\n"
 ",,Znajdźcie go!'' ryknęła, zwracając się do jakichkolwiek bogów, którzy mogli słyszeć, oraz do aniołów nad nią.\n"
 "\n"
 
@@ -971,7 +979,7 @@ msgid ""
 "``Is that… wise?'' Rion asked softly.\n"
 "\n"
 msgstr ""
-",,Czy to… rozsądne?'' Rion spytał cicho.\n"
+",,Czy to… rozsądne?'' spytał cicho Rion.\n"
 "\n"
 
 #. type: multicols*
@@ -984,10 +992,10 @@ msgid ""
 "If we want to save Steadwick, we have to end him before he can further strengthen himself.''\n"
 "\n"
 msgstr ""
-"Katarzyna odpowiedziała ogniem w oczach.\n"
-",,Na co nam odbudowa, jeśli wróg będzie tylko kontynuował swoje sztuczki?'' powiedziała.\n"
+"W oczach Katarzyny płonął ogień.\n"
+",,Na co zdać się może odbudowa, skoro ten nikczemnik będzie dalej knuł swoje intrygi?'' powiedziała.\n"
 ",,Nie.\n"
-"Jeśli chcemy ocalić Steadwick, musimy go zniszczyć, zanim zdąży zebrać większe siły.''\n"
+"Jeśli chcemy ocalić Steadwick, musimy go zniszczyć, zanim zdoła zebrać większe siły.''\n"
 "\n"
 
 #. type: multicols*
@@ -1002,7 +1010,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item \\textcolor{darkcandyapplered}{Usuń Archaniołów z armii.}\n"
+"  \\item \\textcolor{darkcandyapplered}{Usuń Archanioły z armii.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Zachowaj resztę armii i zasoby do następnego Scenariusza.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Zresetuj swojego Bohatera zgodnie z normalnymi zasadami kampanii.}\n"
 "\\end{itemize}\n"
