Draft scenario Close to Enemies
Many fixes and balancing - version 1.41

--- a/draft-scenarios/coop/close_to_enemies.tex
+++ b/draft-scenarios/coop/close_to_enemies.tex
@@ -5,12 +5,14 @@
 
 \textbf{Author:} Kelghor
 
-\textbf{Version:} 1.1
+\textbf{Version:} 1.4
 
-\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1309681960179728445}{Archon Studio Discord}
+\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1313651865648369725}{Archon Studio Discord}
 
 \textit{"Sir! They're here again!"}
+
 \textit{"Sound the alarm, we'll repel them as always!" you command, and go to defend the city, just as you have done many times before. Such is the hard life of the surrounding clans, with constant wars and skirmishes with nearby neighbors. Fortunately, your alliance is strong, so you know your back is covered.}
+
 \textit{Therefore, the time has come to end the long-standing wars and crush your enemies once and for all!}
 
 \subsection*{\MakeUppercase{Scenario Length}}
@@ -21,30 +23,30 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Player Count:} 1-6
 
-\textbf{Starting Resources:} 12 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
+\textbf{Starting Resources:} 14 \svg{gold}, 5 \svg{building_materials}, 2 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze} Unit of your choice
+  \item  1 × A Few \svgunit{bronze} units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling.
 
 \textbf{Additional Bonus:}: Only base bonus by difficulty (see the main rules).
 
-\textbf{Map Tile Pool:} Only for 3 and 4 players game, take $P$ × random Far (II–III) map tiles; None of them must contain a settlement. Explore this tiles by common rules.
+\textbf{Map Tile Pool:} Take $P$ × random Far (II–III) map tiles as shared pool. None of them must contain a settlement. ($P$ stands for the number of players)
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
-Setup Far (II--III) Map Tiles with settlements of same faction as players Towns as show a red cubes, see example.
+Take the following Map Tiles and arrange them as shown in the Scenario map layout.
+Setup Far (II--III) Map Tiles with settlements of same faction as players Towns as show a color cubes, or see example.
 
 \begin{itemize}
   \item $P$ × Starting (I) Map Tile.
   \item $P$ × Far (II--III) Map Tile with Settlement of same faction as players Towns.
-  \item 6 × Far (II--III) Map Tile - must not contain tiles with Settlements.
+  \item 2$P$ × Far (II--III) Map Tile - must not contain tiles with Settlements.
 \end{itemize}
 
 \textit{Optional: You can distribute random pieces and covered pieces on the map so that they match your faction's basic terrain.}
@@ -53,10 +55,9 @@ Setup Far (II--III) Map Tiles with settlements of same faction as players Towns 
 
 Make AI card Deck for Settlement defenders.
 
-\textbf{Clan's settlement defenders Deck:} 1 × Attack Card, 1 × Defence Card, 1× Spell Card
+\textbf{Settlement defenders Deck:} 1×Attack Card, 1×Defence Card, 1×Spell Card
 
-\textbf{Clan's settlement defenders Spell deck:} 1 × Magic Arrow Spell Card
-
+\textbf{Settlement defenders Spell deck:} 1×Magic Arrow
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 Conquer all Settlements by any player.
@@ -72,7 +73,7 @@ Conquer all Settlements by any player.
 
 \begin{itemize}
   \item Players can trade by common rules and additional in time if use a Building token for this action.
-  \item When defending the town, and your hero is not here, you can spend only 1 \svg{gold} fee instead of 8 \svg{gold}.
+  \item When defending the town, and your hero is not here, you can still use your units (for free).
   \item Each settlement is defend by clans Settlement defenders. (see below)
 \end{itemize}
 
@@ -82,41 +83,49 @@ Conquer all Settlements by any player.
 
   \begin{itemize}
    \item \textbf{\nth{1} Round:}
-      At start of the round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same faction as players Towns). This tile you can reveal freely.
+    \begin{itemize}
+      \item At start of the round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same faction as players Towns). This tile you can reveal freely.
+    \end{itemize}
    \item \textbf{\nth{2} Round:}
-      If enemy's settlement is not conquered, the first wave of enemy clan armies attacks the towns. (see below)
+    \begin{itemize}
+      \item  First wave of enemy clan armies attacks the towns. (see below)
+      \item  Each player who defended his own town, during this round can hire secondary hero for 5 \svg{gold}, but you still have to use the population token.
+    \end{itemize}
    \item \textbf{\nth{3} Round:}
-      At start of the round, each player shows up one tile (Far (II--III) Map Tile. This tile you can reveal freely. (Not matter if tile is from pool or map template.)
+    \begin{itemize}
+      \item At start of the round, each player shows up one tile (Far (II--III) Map Tile. This tile you can reveal freely. (Not matter if tile is from pool or map template.)
+    \end{itemize}
    \item \textbf{\nth{4} Round:}
     \begin{itemize}
-      \item If enemy's settlement is not conquered, the second wave of enemy clan armies attacks the towns. (see below)
-      \item Each player who defended his own town, Search (3) the \textit{Artifact Deck}.
+      \item Second wave of enemy clan armies attacks the towns. (see below)
+      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
      \end{itemize}
    \item \textbf{\nth{6} Round:}
     \begin{itemize}
-      \item If enemy's settlement is not conquered, the third wave of enemy clan armies attacks the towns. (see below)
-      \item Each player who defended his own town, Search (3) the \textit{Artifact Deck}.
+      \item Third wave of enemy clan armies attacks the towns. (see below)
+      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
     \end{itemize}
   \end{itemize}
 
 \subsection*{\MakeUppercase{Enemy's clans waves}}
 \begin{itemize}
   \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
-  \item At the start of the round, the battles begins.
-  \item Before attack, you can build or recruit unit, and use Might and Magic cards, but you cant move with hero.
+  \item At the start of the each player's turn, the battle begins.
+  \item Before attack, you can use your building, spell book and population tokens, and use Might and Magic cards, but you can't move with hero.
   \item Each player has to defend his own castle.
+  \item If you have citadel, \textit{Arrow tower} has decreased attack. The attack is for first/second/third wave as 2/3/4\svg{attack}.
   \item The battle does not cost any extra movement points.
-  \item The strength of the seige army is determined by the table \textit{Enemy's Clans armies}.
+  \item The strength of the siege army is determined by the table \textit{Enemy's Clans armies}.
   \item If your main hero is present in any of allied town (not settlement) and Clan wave attack your allied town where is no main hero, you can participate on defending allied castle by using Might and Magic cards (Simply: you defend your teammate's castle with their units and your hero's cards).
-  \item If your main hero participated in any of castle defence, gain one experience (half of level) - this not stack if defend two castle of same wave.
+  \item If you defended your town, gain one \svg{experience}. It doesn't matter if the main hero was in the fight.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Settlements defenders}}
 \begin{itemize}
-  \item The strength of the army in Settlement is determined by the table \textit{Enemy's Clans armies}, last row.
+  \item The strength of the army in Settlement is determined by the table \textit{Enemy's Clans armies} (last row).
   \item The battle does not cost any extra movement points.
   \item In this battles, you has to use AI cards.
-  \item After won battle, you GAIN one level.
+  \item After won battle, you gain one level.
 \end{itemize}
 
 \end{multicols*}
@@ -189,14 +198,14 @@ Conquer all Settlements by any player.
 %   \vspace{2em}
   \begin{figure}[h!]
     \centering
-    \captionof{figure}{\textbf{EXAMPLE FOR 5 PLAYERS}}
-    \includegraphics[width=0.55\paperwidth]{\maps/close_to_enemies_p5.png}
+    \captionof{figure}{\textbf{5-PLAYER SCENARIO | EXAMPLE}}
+    \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p5.png}
   \end{figure}
 %   \vspace{2em}
   \begin{figure}[h!]
     \centering
-    \captionof{figure}{\textbf{EXAMPLE FOR 6 PLAYERS}}
-    \includegraphics[width=0.55\paperwidth]{\maps/close_to_enemies_p6.png}
+    \captionof{figure}{\textbf{6-PLAYER SCENARIO | EXAMPLE}}
+    \includegraphics[width=0.75\paperwidth]{\maps/close_to_enemies_p6.png}
   \end{figure}
 
 \end{center}
