Resolves qwrtln/Homm3BG-mission-book#145

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -40,17 +40,10 @@ This Scenario is played over 12 Rounds.
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
-  \item Starting Tiles of your chosen Factions
-  \item Ignore their yellow borders
-\end{itemize}
-
-\textbf{4 × Far (II--III) Map Tile}
-
-\textbf{4 × Near (IV--V) Map Tile}
-\begin{itemize}
-  \item All Near Map Tiles must have Obelisks
+	\item 2 × Starting (I) Map Tile
+	\item 4 × Far (II--III) Map Tile
+	\item 4 × Near (IV--V) Map Tile with the Obelisk field
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -90,6 +83,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
+  \item Ignore all yellow borders on Starting Tiles.
   \item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.
   \item The Hero who defeats an enemy army gains 2 \svg{experience}.
     The victorious player rolls two Treasure Dice and resolves one of them.
