--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -42,20 +42,16 @@ This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
-$\boldsymbol{P}$ \textbf{× Starting (I) Map Tile}
 \begin{itemize}
-  \item Starting Tiles of your chosen Factions.
-  \item Ignore their yellow borders.
+	\item P × Starting (I) Map Tile
+	\item 2P × Far (II--III) Map Tile
+	\item 2P × Near (IV--V) Map Tile
+	\item (P + 1) × Center (VI--VII) Map Tile
 \end{itemize}
 
-$\boldsymbol{2 P}$ \textbf{× Far (II--III) Map Tile}
-
-$\boldsymbol{2 P}$ \textbf{× Near (IV--V) Map Tile}
-
-$\boldsymbol{(P + 1)}$ \textbf{× Center (VI--VII) Map Tile}
-
-If you don't have enough VI--VII Tiles, you can use another Tile near Tile I.
-The center of this Tile is the Titans' Stronghold.
+\textbf{\MakeUppercase{Note:}} If you don’t have enough VI--VII Tiles, you can
+use another Tile near I Tiles. The center of this
+Tile is the Titans’ Stronghold.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
