--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -468,11 +468,11 @@
 
 \clearpage
 
+\include{coops/main.tex}
+
 \include{clash/main.tex}
 
 \include{campaigns/main.tex}
-
-\include{coop/main.tex}
 
 \include{sections/back_cover.tex}
 
