--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -29,7 +29,7 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item  1 × A Few \svgunit{bronze} units of your choice
+  \item  1 × A Few \svgunit{bronze} Units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling.
@@ -41,11 +41,11 @@ This Scenario is played over 7 Rounds.
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout.
-Setup Far (II--III) Map Tiles with settlements of same faction as players Towns as show a color cubes, or see example.
+Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns as show a color cube, or see example.
 
 \begin{itemize}
   \item $P$ × Starting (I) Map Tile.
-  \item $P$ × Far (II--III) Map Tile with Settlement of same faction as players Towns.
+  \item $P$ × Far (II--III) Map Tile with Settlement of same Faction as players Towns.
   \item 2$P$ × Far (II--III) Map Tile - must not contain tiles with Settlements.
 \end{itemize}
 
@@ -53,11 +53,11 @@ Setup Far (II--III) Map Tiles with settlements of same faction as players Towns 
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
-Make AI card Deck for Settlement defenders.
+Make AI Card Deck for Settlement defenders.
 
 \textbf{Settlement defenders Deck:} 1×Attack Card, 1×Defence Card, 1×Spell Card
 
-\textbf{Settlement defenders Spell deck:} 1×Magic Arrow
+\textbf{Settlement defenders Spell Deck:} 1×Magic Arrow
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 Conquer all Settlements by any player.
@@ -73,27 +73,27 @@ Conquer all Settlements by any player.
 
 \begin{itemize}
   \item Players can trade by common rules and additional in time if use a Building token for this action.
-  \item When defending the town, and your hero is not here, you can still use your units (for free).
+  \item When defending the town, and your hero is not here, you can still use your Units (for free).
   \item Each settlement is defend by clans Settlement defenders. (see below)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-  Take some other collor cubes and put them onto following rounds as reminder of events.
+  Take some other collor cube and put them onto following Rounds as reminder of events.
 
   \begin{itemize}
    \item \textbf{\nth{1} Round:}
     \begin{itemize}
-      \item At start of the round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same faction as players Towns). This tile you can reveal freely.
+      \item At start of the Round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This tile you can reveal freely.
     \end{itemize}
    \item \textbf{\nth{2} Round:}
     \begin{itemize}
       \item  First wave of enemy clan armies attacks the towns. (see below)
-      \item  Each player who defended his own town, during this round can hire secondary hero for 5 \svg{gold}, but you still have to use the population token.
+      \item  Each player who defended his own town, during this Round can hire secondary Hero for 5 \svg{gold}, but you still have to use the population token.
     \end{itemize}
    \item \textbf{\nth{3} Round:}
     \begin{itemize}
-      \item At start of the round, each player shows up one tile (Far (II--III) Map Tile. This tile you can reveal freely. (Not matter if tile is from pool or map template.)
+      \item At start of the Round, each player shows up one tile (Far (II--III) Map Tile. This tile you can reveal freely. (Not matter if tile is from pool or map template.)
     \end{itemize}
    \item \textbf{\nth{4} Round:}
     \begin{itemize}
@@ -111,21 +111,21 @@ Conquer all Settlements by any player.
 \begin{itemize}
   \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
   \item At the start of the each player's turn, the battle begins.
-  \item Before attack, you can use your building, spell book and population tokens, and use Might and Magic cards, but you can't move with hero.
+  \item Before attack, you can use your building, spell book and population tokens, and use Might and Magic Cards, but you can't move with Hero.
   \item Each player has to defend his own castle.
   \item If you have citadel, \textit{Arrow tower} has decreased attack. The attack is for first/second/third wave as 2/3/4\svg{attack}.
   \item The battle does not cost any extra movement points.
   \item The strength of the siege army is determined by the table \textit{Enemy's Clans armies}.
-  \item If your main hero is present in any of allied town (not settlement) and Clan wave attack your allied town where is no main hero, you can participate on defending allied castle by using Might and Magic cards (Simply: you defend your teammate's castle with their units and your hero's cards).
-  \item If you defended your town, gain one \svg{experience}. It doesn't matter if the main hero was in the fight.
+  \item If your main Hero is present in any of allied town (not settlement) and Clan wave attack your allied town where is no main Hero, you can participate on defending allied castle by using Might and Magic Cards (Simply: you defend your teammate's castle with their Units and your Hero's Cards).
+  \item If you defended your town, gain one \svg{experience}. It doesn't matter if the main Hero was in the fight.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Settlements defenders}}
 \begin{itemize}
   \item The strength of the army in Settlement is determined by the table \textit{Enemy's Clans armies} (last row).
   \item The battle does not cost any extra movement points.
-  \item In this battles, you has to use AI cards.
-  \item After won battle, you gain one level.
+  \item In this battles, you has to use AI Cards.
+  \item After won battle, you gain one Level.
 \end{itemize}
 
 \end{multicols*}
