--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -43,7 +43,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
 	\item 2 × Starting (I) Map Tile
 	\item 4 × Far (II--III) Map Tile
-	\item 4 × Near (IV--V) Map Tile with the Obelisk field
+	\item 4 × Near (IV--V) Map Tile with the Obelisk Field
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
