cr capitalize second try

--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -41,7 +41,7 @@ This Scenario is played over 7 Rounds.
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout.
-Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns as show a color cube, or see example.
+Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns as show a color Cube, or see example.
 
 \begin{itemize}
   \item $P$ × Starting (I) Map Tile.
@@ -49,7 +49,7 @@ Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns 
   \item 2$P$ × Far (II--III) Map Tile - must not contain tiles with Settlements.
 \end{itemize}
 
-\textit{Optional: You can distribute random pieces and covered pieces on the map so that they match your faction's basic terrain.}
+\textit{Optional: You can distribute random pieces and covered pieces on the map so that they match your Faction's basic terrain.}
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
@@ -73,18 +73,18 @@ Conquer all Settlements by any player.
 
 \begin{itemize}
   \item Players can trade by common rules and additional in time if use a Building token for this action.
-  \item When defending the town, and your hero is not here, you can still use your Units (for free).
+  \item When defending the town, and your Hero is not here, you can still use your Units (for free).
   \item Each settlement is defend by clans Settlement defenders. (see below)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-  Take some other collor cube and put them onto following Rounds as reminder of events.
+  Take some other collor Cube and put them onto following Rounds as reminder of events.
 
   \begin{itemize}
    \item \textbf{\nth{1} Round:}
     \begin{itemize}
-      \item At start of the Round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This tile you can reveal freely.
+      \item At start of the Round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
     \end{itemize}
    \item \textbf{\nth{2} Round:}
     \begin{itemize}
@@ -93,7 +93,7 @@ Conquer all Settlements by any player.
     \end{itemize}
    \item \textbf{\nth{3} Round:}
     \begin{itemize}
-      \item At start of the Round, each player shows up one tile (Far (II--III) Map Tile. This tile you can reveal freely. (Not matter if tile is from pool or map template.)
+      \item At start of the Round, each player shows up one Tile (Far (II--III) Map Tile. This Tile you can reveal freely. (Not matter if Tile is from pool or map template.)
     \end{itemize}
    \item \textbf{\nth{4} Round:}
     \begin{itemize}
