--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -36,7 +36,7 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Additional Bonus:}: Only base bonus by difficulty (see the main rules).
 
-\textbf{Map Tile Pool:} Take $P$ × random Far (II–III) map tiles as shared pool. None of them must contain a settlement. ($P$ stands for the number of players)
+\textbf{Map Tile Pool:} Take $P$ × random Far (II–III) map Tiles as shared pool. None of them must contain a settlement. ($P$ stands for the number of players)
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -46,7 +46,7 @@ Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns 
 \begin{itemize}
   \item $P$ × Starting (I) Map Tile.
   \item $P$ × Far (II--III) Map Tile with Settlement of same Faction as players Towns.
-  \item 2$P$ × Far (II--III) Map Tile - must not contain tiles with Settlements.
+  \item 2$P$ × Far (II--III) Map Tile - must not contain Tiles with Settlements.
 \end{itemize}
 
 \textit{Optional: You can distribute random pieces and covered pieces on the map so that they match your Faction's basic terrain.}
@@ -84,7 +84,7 @@ Conquer all Settlements by any player.
   \begin{itemize}
    \item \textbf{\nth{1} Round:}
     \begin{itemize}
-      \item At start of the Round, each player show up the \textit{nemesis map tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
+      \item At start of the Round, each player show up the \textit{nemesis map Tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
     \end{itemize}
    \item \textbf{\nth{2} Round:}
     \begin{itemize}
