Reduce subsection breaks by columns/pages

--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -38,6 +38,8 @@ This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 
 \textbf{Additional Bonus:} None
 
+\vspace*{\fill}\columnbreak
+
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
