--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -36,6 +36,8 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Additional Bonus:} Search (2) the Artifact Deck
 
+\vspace*{\fill}\columnbreak
+
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
@@ -111,8 +113,8 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.
 
-  \item Enemy armies move at the end of every Turn, starting with the Turn they spawned.
   \item Enemy armies have 3 MPs per Round.
+  \item Enemy armies move at the end of every Turn, starting with the Turn they spawned.
   \item Enemy armies move as described in the rulebook (p.\,33), but instead of capturing, they destroy everything in their path.
     Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.
   \item If an enemy's movement could go in different directions, the players decide which way they go.
