Resolves https://github.com/qwrtln/Homm3BG-mission-book/issues/145

--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -38,13 +38,10 @@ This Scenario is played over 8 Rounds.
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
-$\boldsymbol{P}$ \textbf{× Starting (I) Map Tile}
 \begin{itemize}
-  \item Starting Tiles of your chosen Factions.
-  \item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III)
+  \item P × Starting (I) Map Tile
+  \item 4P × Far (II--III) Map Tile
 \end{itemize}
-
-$\boldsymbol{4 P}$ \textbf{× Far (II--III) Map Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -64,6 +61,8 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
+    \item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III).
+
     \item You can't build a \svgunit{golden} Dwelling.
 
     \item You can give Units to another player, even outside your Turn, if one of your Heroes is:
