--- a/templates/default.tex
+++ b/templates/default.tex
@@ -42,15 +42,12 @@ This Scenario is played over ... Rounds.
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
-
-  \textbf{X × Starting (I) Map Tile}
 \begin{itemize}
-    \item ... additional constraints ...
+  \item W × Starting (I) Map Tile
+  \item X × Far (II--III) Map Tile
+  \item Y × Near (IV--V) Map Tile
+  \item Z × Center (VI--VII) Map Tile
 \end{itemize}
-
-\textbf{Y × Far (II--III) Map Tile}
-
-\textbf{Z × Near (IV--V) Map Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
